--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -34,7 +34,7 @@
         }
       }
     </style>
-  
+  <!--Navbar  -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
     <button
@@ -62,42 +62,50 @@
         <li>
           <a class="nav-link" href="/trips">Trips</a>
         </li>
-        <li>
-          <form action="/logout?_method=DELETE" method="POST">
-              <input type="submit" value="logout" style="margin-left: 1100px; margin-top: 4px; ">
-          </li>
-        </li>
       </ul>
+      <form class="form-inline my-2 my-lg-0" action="/logout?_method=DELETE" method="POST">
+        <input type="submit" value="logout" >
+      
     </div>
   </div>
 </nav>
+
+<!-- Background image -->
 <div
   id="intro-example"
   class="p-5 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2016/01/09/18/27/old-1130731_1280.jpg');
-  background-size: cover;
-  
-  "
+  background-size: cover;"
 >
-    
-    
-      <div> 
-        <h1>Welcome to the register Page!</h1>
-
+<div class="mask" style="background-color: rgba(0,0,0,0.7)">
+  <div class="d-flex justify-content-center align-items-center h-100">
+    <div class="text-white">
+    <h1 class="mb-3">Welcome to the register Page!</h1> 
         <form action="/register" method="post">
-            <p>
-                <input type="text" name="username" placeholder="username" required>
-            </p>
-            <p>
-                <input type="email" name="email" placeholder="email@host.com" required>
-            </p>
-            <p>
-                <input type="password" name="password" placeholder="password" required minlength="8">
-            </p>
-                <input type="submit" value="Submit">
-            </p>
-        </form>
-      </div>  
+            <div class="mb-3 row">
+              <label for="username" class="col-sm-2">Username</label>
+              <div class="col-sm-10">
+               <input type="text" class="form-control" name="username" placeholder="username" required>
+              </div>
+            </div>
+            <div class="mb-3 row">
+              <label for="email" class="col-sm-2">Email</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" name="email" placeholder="email@host.com" required>
+              </div>
+            </div>
+            <div class="mb-3 row">
+              <label for="password" class="col-sm-2">Password</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" name="password" placeholder="password" required minlength="8">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-outline-light btn-lg mb-3">Submit</button>
+          </form>
+      </div>
+      </div> 
+    </div>
+  </div>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
