--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -52,13 +52,13 @@
   </nav>
   <div
   id="intro-example"
-  class="p-5 text-left bg-image"
+  class="p-0 text-left bg-image"
   style="background-image: url('https://cdn.pixabay.com/photo/2014/08/15/11/29/beach-418742_1280.jpg');
   background-size: cover;
-  padding: none;
+  min-height: 94.3vh;
   "
 >
-  <div style="float:left; margin: none; color: white; padding: 5px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
+  <div style="border-radius: 25%; color: white; padding: 30px; background-color: rgba(0,0,0,0.7); max-width: fit-content;">
     <h1>Here are your trips!</h1>
 
         <% if(!trip.length) { %>
@@ -66,7 +66,7 @@
           <% } else {%>
         <ul>
           <% trip.forEach(trip => { %>
-            <a href="/trip/<%= trip._id %>"> 
+            <a class="btn btn-info" href="/trip/<%= trip._id %>"> 
               <li>
               <%= trip.name %> 
               </li>
