--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -78,15 +78,14 @@
           <p>Country: <%= traveler[0].address.country %> </p>
           <a href="/traveler/<%= traveler[0]._id %>/edit "; style="margin-left: 5px;">Edit</a>
           <a href="/trip">Add a new trip!</a>
-        </div>
-        <div class="clearfix">
-          <img src="..." class="col-md-6 float-md-end mb-3 ms-md-3" alt="...">
-        </div>
 
-        
-        <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
-            <input type="submit" value="Delete Account">
-        </form>  
+          <div class="position-absolute bottom-0 end-0">
+            <form action="/traveler/<%= traveler[0]._id %>?_method=DELETE" method=POST>
+              <input class="bg-warning text-dark" type="submit" value="Delete Account">
+          </form> 
+          </div>
+  </div>
+      
         <% } %> 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
