--- a/views/traveler/index.ejs
+++ b/views/traveler/index.ejs
@@ -66,13 +66,9 @@
 >
         <div style="margin-left: 5px; color: white; padding: 5px; background-color: rgba(0,0,0,0.7); max-width: fit-content; border-radius: 10%; padding: 30px; min-height: 50vh;">  
         <h1>Welcome <%= traveler[0].name %> </h1>  
-        <% if (!traveler.length) { %>
-            <p> <a href="/traveler/new">Enter</a> some information so that we know more about you. </p>
-          <% } else {%>
-      
-          <p> <%= traveler[0].bio %> </p>
-          <p>My Home Base</p>
-          <p><%= traveler[0].address.city %>, <%= traveler[0].address.state %>, <%= traveler[0].address.country %> </p>
+                  <p> <%= traveler[0].bio %> </p>
+          <p>My Home Base is 
+          <%= traveler[0].address.city %> <%= traveler[0].address.state %>, <%= traveler[0].address.country %> </p>
           <div class="dropdown">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdown" data-bs-toggle="dropdown" aria-expanded="false">Options</button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -92,8 +88,8 @@
           </div>
   </div>
       
-        <% } %> 
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+       
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
 </html>
