--- a/views/trips/show.ejs
+++ b/views/trips/show.ejs
@@ -61,12 +61,10 @@
         id="intro-example"
         class="p-0 text-left bg-image"
         style="background-image: url('https://cdn.pixabay.com/photo/2017/06/05/11/01/airport-2373727_1280.jpg');
-        background-size: cover;
-        
-        "
-        
-      >
+        background-size: cover;">
+          <div id='map' style='width: 400px; height: 300px;'></div>
 
+      
       <div style="
       color: white;
         background-color: rgba(0,0,0,0.7);
@@ -129,7 +127,7 @@
   });
 
   </script>
-<div id='map' style='width: 400px; height: 300px;'></div>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 </body>
